--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 # BASIC
-numpy
-pandas
-spacy
+numpy==2.3.5
+pandas==2.3.3
+spacy==3.8.11
 # ML & NLP
-torch
-unsloth==2025.8.9
-unsloth-zoo==2025.8.8
-transformers==4.55.4
-trl==0.21.0
-accelerate
+torch==2.9.0
+unsloth==2025.11.3
+unsloth-zoo==2025.11.4
+transformers==4.57.1
+trl==0.23.0
+accelerate==1.11.0
 gliner==0.2.13
-timm
-ollama
-nltk
+timm==1.0.22
+ollama==0.6.1
+nltk==3.9.2
 # DATASETS
-datasets
+datasets==4.3.0
 # NOTEBOOKS
 marimo[recommended]
 ipywidgets
